// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. with inline video 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f0f0f0",
    }
  }
>
  <RCTScrollView>
    <View>
      <View
        style={
          Object {
            "backgroundColor": "#ffffff",
            "maxWidth": "100%",
            "overflow": "hidden",
            "width": undefined,
          }
        }
      />
      <View
        style={
          Object {
            "backgroundColor": "#ffffff",
            "maxWidth": "100%",
            "overflow": "hidden",
            "width": undefined,
          }
        }
      >
        <View
          style={
            Object {
              "alignSelf": "center",
              "flexDirection": "column",
              "paddingBottom": 25,
              "width": 660,
            }
          }
        >
          <Video />
          <View>
            <View
              style={
                Object {
                  "paddingLeft": 10,
                  "paddingTop": 5,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#696969",
                    "fontFamily": "GillSansMTStd-Medium",
                    "fontSize": 13,
                    "lineHeight": 20,
                  }
                }
              >
                This is video caption
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "backgroundColor": "#ffffff",
            "maxWidth": "100%",
            "overflow": "hidden",
            "width": undefined,
          }
        }
      >
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <ArticleExtras />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`2. with ad on mainstandard 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f0f0f0",
    }
  }
>
  <RCTScrollView>
    <View>
      <View
        style={
          Object {
            "backgroundColor": "#ffffff",
            "maxWidth": "100%",
            "overflow": "hidden",
            "width": undefined,
          }
        }
      />
      <View
        style={
          Object {
            "backgroundColor": "#ffffff",
            "maxWidth": "100%",
            "overflow": "hidden",
            "width": undefined,
          }
        }
      >
        <Ad />
      </View>
      <View
        style={
          Object {
            "backgroundColor": "#ffffff",
            "maxWidth": "100%",
            "overflow": "hidden",
            "width": undefined,
          }
        }
      >
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <ArticleExtras />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`3. with ad on maincomment 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f0f0f0",
    }
  }
>
  <RCTScrollView>
    <View>
      <View
        style={
          Object {
            "backgroundColor": "#ffffff",
            "maxWidth": "100%",
            "overflow": "hidden",
            "width": undefined,
          }
        }
      />
      <View
        style={
          Object {
            "backgroundColor": "#ffffff",
            "maxWidth": "100%",
            "overflow": "hidden",
            "width": undefined,
          }
        }
      >
        <Ad />
      </View>
      <View
        style={
          Object {
            "backgroundColor": "#ffffff",
            "maxWidth": "100%",
            "overflow": "hidden",
            "width": undefined,
          }
        }
      >
        <View
          style={
            Object {
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "overflow": "hidden",
              "width": undefined,
            }
          }
        >
          <ArticleExtras />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;
